# agda-index-seedui

./: .gitignore  Cargo.toml  index.html
css/: style.css
src/: lib.rs  model.rs  search.rs  update.rs  view.rs
src/search/: fuzzy.rs  mod.rs  probly.rs
