[package]
version = "0.1.0"
name = "agda-index-seedui"
repository = "https://github.com/seed-rs/seed-quickstart"
authors = ["Michele De Pascalis <michele.de.pascalis.1024@gmail.com>"]
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.8.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
anyhow = "1.0.71"
console_error_panic_hook = "0.1.7"
wasm-logger = "0.2.0"
log = "0.4.19"
probly-search = "1.2.4"


[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
